# fastapi-blog

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.configs/: app.example.toml  db.example.env  test.example.toml  test.toml
.envs/: app.env_dist  test.env_dist
app/: Dockerfile  alembic.ini  pyproject.toml
app/migrations/versions/: 75bd87701b21_initial.py
app/src/: __main__.py  config.py  dependencies.py  main.py
app/src/database/: mixins.py  session.py
app/src/entity/comments/: models.py
app/src/entity/likes/: models.py
app/src/entity/posts/: models.py
app/src/entity/users/: models.py
migrations/: env.py
migrations/versions/: 2a739dbc095c_rebuild_user_model_for_fastapi_users.py  75bd87701b21_initial.py
src/: __main__.py  app_setup.py  config.py  dependencies.py  depends_stub.py  stubs.py
src/auth/: router.py  user_manager.py
src/database/: base.py  dependencies.py  mixins.py  sa_utils.py  session.py
src/entity/: models.py
src/entity/comments/: models.py
src/entity/likes/: models.py
src/entity/posts/: models.py
src/entity/users/: auth_manager.py  db.py  dependencies.py  gateway.py  models.py  router.py  schemas.py  service.py
src/fastapi_blog/: __main__.py  app_setup.py  config.py  consts.py  dependencies.py  depends_stub.py
src/fastapi_blog/database/: base.py  dependencies.py  mixins.py  sa_utils.py
src/fastapi_blog/entity/: models.py
src/fastapi_blog/entity/comments/: models.py
src/fastapi_blog/entity/likes/: models.py
src/fastapi_blog/entity/posts/: models.py
src/fastapi_blog/entity/users/: dependencies.py  gateway.py  models.py  repository.py  router.py  schemas.py  service.py
src/fastapi_blog/migrations/versions/: 2a739dbc095c_rebuild_user_model_for_fastapi_users.py
tests/: conftest.py  test.db  test_initial.py
tests/integration/: conftest.py
tests/integration/user/: conftest.py  test_user.py
tests/user/: conftest.py  test_user.py
